--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "timer",
+  "homepage": "https://ezayak.github.io/dogeball-timer/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
